// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cherrypickAndCreateTargetPullRequest when cherry-picking fails should start conflict resolution mode 4`] = `
Array [
  Array [
    "git reset --hard && git clean -d --force && git fetch elastic 6.x && git checkout -B backport/6.x/commit-mySha elastic/6.x --no-track",
    Object {
      "cwd": "/myHomeDir/.backport/repositories/elastic/kibana",
    },
  ],
  Array [
    "git fetch elastic 7.x:7.x --force",
    Object {
      "cwd": "/myHomeDir/.backport/repositories/elastic/kibana",
    },
  ],
  Array [
    "git cherry-pick mySha",
    Object {
      "cwd": "/myHomeDir/.backport/repositories/elastic/kibana",
    },
  ],
  Array [
    "git --no-pager diff --check",
    Object {
      "cwd": "/myHomeDir/.backport/repositories/elastic/kibana",
    },
  ],
  Array [
    "git --no-pager diff --name-only --diff-filter=U",
    Object {
      "cwd": "/myHomeDir/.backport/repositories/elastic/kibana",
    },
  ],
  Array [
    "git --no-pager diff --check",
    Object {
      "cwd": "/myHomeDir/.backport/repositories/elastic/kibana",
    },
  ],
  Array [
    "git --no-pager diff --check",
    Object {
      "cwd": "/myHomeDir/.backport/repositories/elastic/kibana",
    },
  ],
  Array [
    "git --no-pager diff --check",
    Object {
      "cwd": "/myHomeDir/.backport/repositories/elastic/kibana",
    },
  ],
  Array [
    "git --no-pager diff --name-only --diff-filter=U",
    Object {
      "cwd": "/myHomeDir/.backport/repositories/elastic/kibana",
    },
  ],
  Array [
    "git add --update",
    Object {
      "cwd": "/myHomeDir/.backport/repositories/elastic/kibana",
    },
  ],
  Array [
    "git -c core.editor=true cherry-pick --continue",
    Object {
      "cwd": "/myHomeDir/.backport/repositories/elastic/kibana",
    },
  ],
  Array [
    "git push sqren backport/6.x/commit-mySha:backport/6.x/commit-mySha --force",
    Object {
      "cwd": "/myHomeDir/.backport/repositories/elastic/kibana",
    },
  ],
  Array [
    "git checkout myDefaultSourceBranch && git branch -D backport/6.x/commit-mySha",
    Object {
      "cwd": "/myHomeDir/.backport/repositories/elastic/kibana",
    },
  ],
]
`;

exports[`cherrypickAndCreateTargetPullRequest when commit has a pull request reference should make correct git commands 1`] = `
Array [
  Array [
    "git reset --hard && git clean -d --force && git fetch elastic 6.x && git checkout -B backport/6.x/pr-1000_pr-2000 elastic/6.x --no-track",
    Object {
      "cwd": "/myHomeDir/.backport/repositories/elastic/kibana",
    },
  ],
  Array [
    "git fetch elastic 7.x:7.x --force",
    Object {
      "cwd": "/myHomeDir/.backport/repositories/elastic/kibana",
    },
  ],
  Array [
    "git cherry-pick mySha",
    Object {
      "cwd": "/myHomeDir/.backport/repositories/elastic/kibana",
    },
  ],
  Array [
    "git fetch elastic 7.x:7.x --force",
    Object {
      "cwd": "/myHomeDir/.backport/repositories/elastic/kibana",
    },
  ],
  Array [
    "git cherry-pick mySha2",
    Object {
      "cwd": "/myHomeDir/.backport/repositories/elastic/kibana",
    },
  ],
  Array [
    "git push sqren backport/6.x/pr-1000_pr-2000:backport/6.x/pr-1000_pr-2000 --force",
    Object {
      "cwd": "/myHomeDir/.backport/repositories/elastic/kibana",
    },
  ],
  Array [
    "git checkout myDefaultSourceBranch && git branch -D backport/6.x/pr-1000_pr-2000",
    Object {
      "cwd": "/myHomeDir/.backport/repositories/elastic/kibana",
    },
  ],
]
`;
